--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
-.app {
+.nav {
   width: 100%;
   height: 70px;
   background-color: rgb(26, 42, 74);
   border-bottom: 8px solid rgb(181, 22, 34);
+  position: sticky;
+  top: 0;
 }
 .navbarContainer {
   list-style: none;
