--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -8,21 +8,23 @@
   display: flex;
   flex-wrap: wrap;
   width: 300px;
+  height: 610px;
   text-decoration: none;
 }
 .productImage {
   width: 500px;
-  height: 700px;
+  height: 400px;
   border-bottom: 1px solid royalblue;
 }
 .cardForm {
   width: 500px;
-  height: 1000px;
+  height: 700px;
   border: 1px solid royalblue;
   margin: 0 0 40px 35px;
 }
 .productInfo {
   width: 500px;
+  height: 200px;
 }
 .productName {
   width: 500px;
@@ -58,21 +60,14 @@
   height: 90px;
   border-top: 1px solid rgb(181, 22, 34);
 }
-
-.favori {
-  display: flex;
-  flex: 1;
+.fa-heart {
   font-size: 40px;
   height: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
-  color: black;
 }
-.favori:hover {
-  background-color: rgba(230, 215, 215, 0.486);
-  color: black;
-}
+
 .far {
   cursor: pointer;
 }
@@ -81,4 +76,5 @@
 }
 .fas {
   color: rgb(181, 22, 34);
+  cursor: pointer;
 }
